--- a/views/interaction.ejs
+++ b/views/interaction.ejs
@@ -27,19 +27,42 @@
 </head>
 
 <body>
-    <div class="interaction">
-        <div id="virtualcharacter"></div>
-        <div class="chat-container">
-            <div class="chat-box" id="chat-box"></div>
+    <div id="loading-screen">
+        <div id="start">
+            <h1>Welcome! Click the button below to begin.</h1>
+            <button>Begin</button>
         </div>
+        <div id="loading-animation">
+            <div class="col-md-12 text-center">
+              <h3 class="animate-charcter" id="animate-charcter">Loading...</h3>
+            </div>
+          </div>
     </div>
-    <div class="input-area" id="input-area">
-        <textarea id="user-input" class="user-input" placeholder="Type your message..."></textarea>
-        <button id="send-btn" onclick="sendMessage(`text`)">
-          Send
-          <svg id="send-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m20.447 11.105-16-8A1 1 0 0 0 3.152 4.53L7.82 12l-4.668 7.47a1 1 0 0 0 1.3 1.425l16-8a1 1 0 0 0 0-1.79zM6.731 17.517 9.554 13H12a1 1 0 0 0 0-2H9.554L6.731 6.483 17.764 12z" style="fill:#ffffff"/></svg>
-        </button>
-    </div>
+        <div class="header">
+            <span><h1>Alex&nbsp;</h1><h2>| Virtual Health Assistant</h2></span>
+            <hr/>
+            <h3>Learn About Clinical Trials</h3>
+        </div>
+        <div id="virtualcharacter"></div>
+        <div class="interaction">
+            <div id="chat-container"></div>
+            <div class="input-area" id="input-area">
+                <textarea id="user-input" class="user-input" placeholder="Type your message..."></textarea>
+                <button id="send-btn">
+                    <svg id="send-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <defs>
+                        <linearGradient id="sendGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                            <stop offset="0%" style="stop-color:#19928a" />
+                            <stop offset="100%" style="stop-color:#093935" />
+                        </linearGradient>
+                        </defs>
+                        <path d="m20.447 11.105-16-8A1 1 0 0 0 3.152 4.53L7.82 12l-4.668 7.47a1 1 0 0 0 1.3 1.425l16-8a1 1 0 0 0 0-1.79zM6.731 17.517 9.554 13H12a1 1 0 0 0 0-2H9.554L6.731 6.483 17.764 12z" style="fill:url(#sendGradient)"/>
+                    </svg>  
+                </button>
+            </div>
+        </div>
+        <script type="module" src="/js/interaction.js"></script>
+
 </body>
 
 </html>
