add env to gitignore

--- a/views/interaction.ejs
+++ b/views/interaction.ejs
@@ -30,7 +30,7 @@
     <div id="loading-screen">
         <div id="start">
             <h1>Welcome! Click the button below to begin.</h1>
-            <button>Begin</button>
+            <button class="start-page">Begin</button>
         </div>
         <div id="loading-animation">
             <div class="col-md-12 text-center">
