--- a/public/css/interaction.css
+++ b/public/css/interaction.css
@@ -165,6 +165,10 @@ button {
     transition: .2s ease-in-out;
 }
 
+button .start-page {
+  padding: 15px;
+}
+
 .message-item {
     display: flex;
     flex-direction: column;
