got front end working

--- a/views/interaction.ejs
+++ b/views/interaction.ejs
@@ -46,7 +46,7 @@
         <div id="virtualcharacter"></div>
         <div class="interaction">
             <div id="chat-container"></div>
-            <div id="option-buttons"></div>
+            <div id="options-area"></div>
             <div class="input-area" id="input-area">
                 <textarea id="user-input" class="user-input" placeholder="Type your message..."></textarea>
                 <button id="send-btn">
