--- a/public/css/interaction.css
+++ b/public/css/interaction.css
@@ -1,7 +1,9 @@
 :root {
     --blue: #002657;
     --orange: #fa4616;
-    --gradient: linear-gradient(90deg, #000000 0%, #014b46 50%, #19928a 100%);
+    /* --gradient: linear-gradient(90deg, #000000 0%, #014b46 50%, #19928a 100%); */
+    --gradient: linear-gradient(45deg, #231557 0%, #44107a 29%, rgb(250,70,22,1) 67%, rgba(242, 169, 0,1) 100%);
+    --small-gradient: linear-gradient(45deg, #231557 0%, #60279d 100%);
     --gradient-bg: linear-gradient(45deg, rgba(0,38,87, 0.15) 0%, rgba(250,70,22, 0.15) 100%);
     --gradient-light: linear-gradient(90deg, rgba(242, 169, 0,1) 0%, rgb(250,70,22,1) 100%);
     --grey: #c7c9c8;
@@ -38,7 +40,7 @@ body {
     text-transform: uppercase;
     letter-spacing: -1px;
     margin-bottom: 0px;
-    background-image: linear-gradient(90deg, #000000, #014b46, #19928a);
+    background-image: var(--gradient);
     background-clip: text;
     -webkit-background-clip: text;
     color: white;
@@ -88,7 +90,7 @@ body {
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-start;
-    max-width: 100%;
+    width: 100%;
     max-height: 100vh;
     position: fixed;
     bottom: 55px;
@@ -115,9 +117,15 @@ body {
 }
 
 .input-area {
-    display: flex;
-    width: 100%;
-    justify-content: center;
+  display: none;
+  width: 100%;
+  justify-content: center;
+}
+
+button.option-btn {
+  padding: 15px;
+  border-radius: 21px;
+  margin: 5px 5px 5px 0;
 }
 
 #send-btn {
@@ -165,9 +173,24 @@ button {
     transition: .2s ease-in-out;
 }
 
+button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  background-image: var(--small-gradient);
+}
+
 button.start-page {
   padding: 15px !important;
   border-radius: 25px !important;
+}
+
+#options-area {
+  width: 35%;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  margin: 5px 0 5px 150px;
+  padding: 15px;
 }
 
 .message-item {
@@ -300,13 +323,7 @@ button.start-page {
   .animate-charcter
   {
      text-transform: uppercase;
-    background-image: linear-gradient(
-      90deg,
-      #231557 0%,
-      #44107a 29%,
-      #ff1361 67%,
-      #fff800 100%
-    );
+    background-image: var(--gradient);
     background-size: auto auto;
     background-clip: border-box;
     background-size: 200% auto;
