so many updates

--- a/views/interaction.ejs
+++ b/views/interaction.ejs
@@ -43,6 +43,39 @@
             <hr/>
             <h3>Learn About Clinical Trials</h3>
         </div>
+        <div class="progress-container">
+            <div class="progress-bar">
+                <div id="step0" class="step visited">
+                </div>
+                <div id="step1" class="step">
+                </div>
+                <div id="step2" class="step">
+                </div>
+                <div id="step3" class="step">
+                </div>
+                <div id="step4" class="step">
+                </div>
+                <div id="step5" class="step">
+                </div>
+                <div id="step6" class="step">
+                </div>
+                <div id="step7" class="step">
+                </div>
+                <div id="step8" class="step">
+                </div>
+                <div id="step9" class="step">
+                </div>
+                <div id="step10" class="step">
+                </div>
+                <div id="step11" class="step">
+                </div>
+                <div id="step12" class="step">
+                </div>
+                <div id="step13" class="step">
+                </div>
+            </div>
+        </div>
+          
         <div id="virtualcharacter"></div>
         <div class="interaction">
             <div id="chat-container"></div>
