--- a/public/css/interaction.css
+++ b/public/css/interaction.css
@@ -91,7 +91,7 @@ body {
     justify-content: flex-end;
     align-items: flex-start;
     width: 100%;
-    max-height: 100vh;
+    height: 75vh;
     position: fixed;
     bottom: 55px;
 }
@@ -104,21 +104,38 @@ body {
 }
 
 #chat-container {
-    width: 35%;
-    height: 55vh;
-    padding: 15px;
-    border: 0px;
-    border-radius: 25px;
-    margin-left: 150px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    overflow-y: scroll;
+  width: 35%;
+  height: 75vh;
+  padding: 15px;
+  border: 0px;
+  border-radius: 13px;
+  margin-left: 150px;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll; /* Always show the vertical scrollbar */
+  scrollbar-gutter: stable;
+  background-color: rgba(255, 255, 255, 0.51);
 }
+
+#chat-container::-webkit-scrollbar {
+  background: none;
+  width: 7px;
+}
+
+#chat-container::-webkit-scrollbar-track {
+  border-radius: 55px;
+}
+
+#chat-container::-webkit-scrollbar-thumb {
+  background: var(--small-gradient);
+  border-radius: 55px;
+}
+
 
 .input-area {
   display: none;
   width: 100%;
+  height: 15%;
   justify-content: center;
 }
 
@@ -185,8 +202,9 @@ button.start-page {
 }
 
 #options-area {
-  width: 35%;
-  display: flex;
+  width: 100%;
+  height: 15%;
+  visibility: hidden;
   justify-content: flex-start;
   flex-wrap: wrap;
   margin: 5px 0 5px 150px;
@@ -347,6 +365,113 @@ button.start-page {
     }
   }
 
+  .progress-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    position: fixed;
+    top: 5px;
+  }
+  
+  .progress-bar {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    position: relative;
+  }
+  
+#step0 {
+  border-radius: 7px 0 0 7px;
+}
+
+#step13 {
+  border-radius: 0 7px 7px 0;
+}
+
+  .step {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    position: relative;
+    width: 20%;
+  }
+  
+  .step::before,
+  .step::after {
+      content: '';
+      position: absolute;
+      top: 15px;
+      height: 4px;
+      background: #dcdcdc;
+      z-index: 1;
+  }
+  
+  .step::before {
+      left: -50%;
+      width: 100%;
+      z-index: 1;
+  }
+  
+  .step::after {
+      left: 50%;
+      width: 100%;
+      z-index: 1;
+  }
+  
+  .step:first-child::before {
+      display: none;
+  }
+  
+  .step:last-child::after {
+      display: none;
+  }
+  
+  .step.active::before,
+  .step.active::after {
+    background-image: linear-gradient(
+      90deg,
+      #002657,#fa4616
+    );
+  }
+  
+  .step.visited::before {
+    background-color:  #002657;
+  }
+
+  .step p {
+    margin: 10px 0 0;
+    color: #999;
+    font-size: 15px;
+  }
+  
+  .bullet {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: #fff;
+    border: 3px solid #dcdcdc;
+    color: #dcdcdc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    position: relative;
+    z-index: 2;
+  }
+  
+  .bullet.active {
+    background: #fa4616;
+    border: 3px solid #fa4616;
+    color: #fff;
+  }
+  
+  .bullet.visited {
+    background: #002657;
+    border: 3px solid #002657;
+    color: white;
+  }
 
 /* button:hover {
     background-image: var(--gradient);
