--- a/views/interaction.ejs
+++ b/views/interaction.ejs
@@ -11,6 +11,7 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="/css/interaction.css">
+    <link rel="stylesheet" href="/css/loading.css">
     <!-- Importmap for loading Three.js and other dependencies -->
     <script type="importmap">
         {
@@ -28,52 +29,21 @@
 
 <body>
     <div id="loading-screen">
-        <div id="start">
-            <h1>Welcome! Click the button below to begin.</h1>
-            <button class="start-page">Begin</button>
-        </div>
         <div id="loading-animation">
             <div class="col-md-12 text-center">
-              <h3 class="animate-charcter" id="animate-charcter">Loading...</h3>
+              <div class="loader" style="--n: 1; --f: 0;">LOADING ... </div>
+              <div id="loader-animation" class="progress2 progress-moved">
+                <div class="progress-bar2"></div>
+              </div>
             </div>
           </div>
     </div>
         <div class="header">
             <span><h1>Alex&nbsp;</h1><h2>| Virtual Health Assistant</h2></span>
-            <hr/>
-            <h3>Learn About Clinical Trials</h3>
-        </div>
-        <div class="progress-container">
-            <div class="progress-bar">
-                <div id="step0" class="step visited">
+                <div id="progress-animation" class="progress3 progress3-moved">
+                    <div class="progress-bar3"></div>
                 </div>
-                <div id="step1" class="step">
-                </div>
-                <div id="step2" class="step">
-                </div>
-                <div id="step3" class="step">
-                </div>
-                <div id="step4" class="step">
-                </div>
-                <div id="step5" class="step">
-                </div>
-                <div id="step6" class="step">
-                </div>
-                <div id="step7" class="step">
-                </div>
-                <div id="step8" class="step">
-                </div>
-                <div id="step9" class="step">
-                </div>
-                <div id="step10" class="step">
-                </div>
-                <div id="step11" class="step">
-                </div>
-                <div id="step12" class="step">
-                </div>
-                <div id="step13" class="step">
-                </div>
-            </div>
+                <div class="progress-description" style="--n: 1; --f: 0;"><b>Learn About Clinical Trials&nbsp;</b>| Progress:&nbsp<span id="progress-percent">0</span>%</div>
         </div>
           
         <div id="virtualcharacter"></div>
@@ -81,13 +51,13 @@
             <div id="chat-container"></div>
             <div id="options-area"></div>
             <div class="input-area" id="input-area">
-                <textarea id="user-input" class="user-input" placeholder="Type your message..."></textarea>
+                <textarea id="user-input" class="user-input" placeholder="Type your message. Press Enter or the send button to send your message."></textarea>
                 <button id="send-btn">
                     <svg id="send-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <defs>
                         <linearGradient id="sendGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                            <stop offset="0%" style="stop-color:#19928a" />
-                            <stop offset="100%" style="stop-color:#093935" />
+                            <stop offset="0%" style="stop-color:#ffffff" />
+                            <stop offset="100%" style="stop-color:#ffffff" />
                         </linearGradient>
                         </defs>
                         <path d="m20.447 11.105-16-8A1 1 0 0 0 3.152 4.53L7.82 12l-4.668 7.47a1 1 0 0 0 1.3 1.425l16-8a1 1 0 0 0 0-1.79zM6.731 17.517 9.554 13H12a1 1 0 0 0 0-2H9.554L6.731 6.483 17.764 12z" style="fill:url(#sendGradient)"/>
@@ -95,6 +65,7 @@
                 </button>
             </div>
         </div>
+        <button id="finish-btn">End Conversation</button>
         <script type="module" src="/js/interaction.js"></script>
 
 </body>
