--- a/views/interaction.ejs
+++ b/views/interaction.ejs
@@ -38,6 +38,21 @@
             </div>
           </div>
     </div>
+    <div id="help-modal" class="help-modal">
+        <div class="help-modal-content">
+          <div class="help-row">
+            <div class="help-col">
+              <p class="info-title help">🫤 Having issues?</p>
+              <p class="info help">We apologies for the inconvenience! Please <b>copy the URL for this webpage below</b> and <b>reach out to the researcher on Prolific</b> to help resolve the issue.</p>
+              <p class="info help" id="current-link-help">Please copy the URL for this webpage and reach out to the researcher on Prolific, providing the URL.</p>
+            </div>
+          </div>
+          <hr/>
+          <br/>
+          <button class="help-close">Close</button>
+        </div>
+      </div>
+        <button id="help-icon">&#63;</button>
         <div class="header">
             <span><h1>Alex&nbsp;</h1><h2>| Virtual Health Assistant</h2></span>
                 <div id="progress-animation" class="progress3 progress3-moved">
